font spec changes

--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -13,7 +13,7 @@ const { page } = Astro.props;
                 </a>
             </h1>
         </div>
-        <div id="navbar-menu" class="is-size-6 is-flex navbar-menu">
+        <div id="navbar-menu" class="is-size-6 is-flex navbar-menu is-justify-content-end">
             <a class="is-size-6 navbar-item" href="/" class:list={[{'is-active': page == 'about'}]}> about </a>
             <!--             <a class="navbar-item is-size-5" href="/publications"> Publications </a> -->
             <a
