--- a/src/components/Podcast.astro
+++ b/src/components/Podcast.astro
@@ -12,16 +12,19 @@ interface Props {
 
 const { podcast } = Astro.props;
 ---
+
 <div class="podcast mb-5">
     <h1 class="podcast-title">
-        <strong>{ podcast.title }</strong>
+        <strong>{podcast.title}</strong>
     </h1>
     <h2>
-        { podcast.host }, { podcast.year }
+        {podcast.host}, {podcast.year}
     </h2>
     <h2 class="external-links">
         {
-            podcast.urls.map(url => (<a href={ url.url } target="_blank">{ url.name }</a>))
+            podcast.urls.map((url) => (
+                <a href={url.url} target="_blank">{url.name}</a>
+            ))
         }
     </h2>
 </div>
