--- a/src/components/Talk.astro
+++ b/src/components/Talk.astro
@@ -16,16 +16,19 @@ const { talk } = Astro.props;
 talk.title = await parseInline(talk.title);
 talk.venue = await parseInline(talk.venue);
 ---
+
 <div class="talk mb-5">
     <h1 class="talk-title">
-        <strong>{ talk.title }</strong>
+        <strong>{talk.title}</strong>
     </h1>
     <h2>
-        <span set:html={talk.venue}></span>, { talk.year }
+        <span set:html={talk.venue} />, {talk.year}
     </h2>
     <h2 class="external-links">
         {
-            talk.urls.map(url => (<a href={ url.url } target="_blank">{ url.name }</a>))
+            talk.urls.map((url) => (
+                <a href={url.url} target="_blank">{url.name}</a>
+            ))
         }
     </h2>
 </div>
