--- a/src/pages/photos.astro
+++ b/src/pages/photos.astro
@@ -1,4 +1,5 @@
 ---
+import '../styles/gallery.css'
 import { getCollection } from "astro:content";
 import Layout from "../layouts/Layout.astro";
 import NavigationBar from "../components/NavigationBar.astro";
