Update intro to reflect PhD completion and hide photos nav item

--- a/src/components/NavigationBar.astro
+++ b/src/components/NavigationBar.astro
@@ -23,7 +23,7 @@ const { page } = Astro.props;
             >
                 cv
             </a>
-            <a class="is-size-6 navbar-item" href="/photos" class:list={[{'is-active': page == 'photos'}]}> photos </a>
+            <!-- <a class="is-size-6 navbar-item" href="/photos" class:list={[{'is-active': page == 'photos'}]}> photos </a> -->
             <a class="is-size-6 navbar-item" href="/misc" class:list={[{'is-active': page == 'misc'}]}> misc </a>
             <!--             <a class="is-size-6 navbar-item" target='_blank' href="https://nothingtohide.online"> nothingtohide </a> -->
             <!--             <a class="is-size-6 navbar-item" href="/misc"> misc </a> -->
